apps/httpbin/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    #traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-dns
    #traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
       - httpbin.jg1g.com
      secretName: httpbin-tls 
  rules:
  - host: httpbin.jg1g.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
